$Id$

	WARNING !!! THIS VERSION IS BUGGY !!! THIS IS UNSTABLE !!!

v0.71.5		18-Aug-2005

	nodelist.a:
		Clear node Hold or Down status if set in nodes setup.

	mbcico:
		Only disallow GZ/BZ2 compression by default if both zlib and
		bzlib are not present.
		Fixed crash on received m_get command.

	mbfido:
		Removed debug logging for solved crash.
		Code cleanup.
		Added debug logging in rfc2ftn to track a rare problem.

	mbdiff:
		Code cleanup.

	mball:
		Code cleanup.

	mbstat:
		Code cleanup.

	mbuser:
		Code cleanup.

	mbfile:
		Code cleanup.
		With the index command only changed areas are indexed. This
		removes the feature request for a switch per area from the
		TODO list because this solution works better.

	mbmsg:
		Code cleanup and removed dead code.

	mbout:
		Code cleanup.

	mbsebbs:
		Code cleanup.
		Changed syntax for calling mbpasswd.
		Blocked sysop to chat and page the sysop. Sysops use mbmon.

	mbnewusr:
		Changed syntax for calling mbpasswd.
		If we can detect the users screenlength then we don't bother
		asking the user.
		Added logging during execute of mbuseradd.

	mbsetup:
		Added node setup switch to override node Hold or Down status.
		Changed syntax for calling mbpasswd.

	script:
		Added mbfile check to monthly maintenance script.

	mbpasswd:
		Added security checks to see if this program is legally called.
		Changed commandline syntax.

	mbuseradd:
		Added security checks to see if this program is legally called.


v0.71.4		12-Aug-2005 - 18-Aug-2005

	mbselib.a:
		Removed some debug logging.

	msgbase.a:
		Fixed JAM pack function, the lastread pointers could be wrong
		if the last messages of an area were deleted.

	mbfido:
		Added extra debug logging to trace an SIGSEG when forwarding
		files.
		Added error logmessage in case *.msg path isn't defined.
		Fixed a segfault when echomail.jam or netmail.jam is corrupted
		when scanning for outgoing mail.
		Fixed fido style from address for posting news.